# xmonad-config

./: README.org  build  xmonad-config.cabal
src/: xmobar.hs  xmonad.hs
src/Util/: Brightness.hs  ColorPalette.hs  Plugins.hs  Volume.hs
