cabal-version:      2.4
name:               xmonad-config
version:            0.1.0.0
synopsis: Xmonad-config
description: Xmonad-config
license: BSD-3-Clause
author:             Jhony Angulo
maintainer:         leohjaf@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable xmobar
    main-is: xmobar.hs
    ghc-options: -threaded
                 -Wall
                 -Wextra
                 -Werror
    build-depends: base,
                   async,
                   process,
                   xmonad,
                   xmonad-contrib,
                   xmobar
    hs-source-dirs: src
    default-language: Haskell2010
    other-modules: Util.ColorPalette
                   Util.Plugins
executable xmonad-x86_64-linux
    main-is: xmonad.hs
    ghc-options: -threaded
                 -Wall
                 -Wextra
--                 -Werror
    build-depends: base,
                   X11 >= 1.10.3,
                   containers >= 0.6.5.1,
                   xmobar,
                   xmonad >= 0.18.0,
                   xmonad-contrib >= 0.18.0
    hs-source-dirs: src
    default-language: Haskell2010
    other-modules: Util.Brightness,
                   Util.ColorPalette
                   Util.Volume
